[package]
name = "hyprsunset-overdrive"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dirs = "6.0.0"
fs2 = "0.4.3"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
simplelog = "0.12.2"
sunrise = "1.2.1"
toml = "0.8.22"
