[package]
name = "hyprsunset-overdrive"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
dirs = "6.0.0"
fs2 = "0.4.3"
glib = "0.20.9"
gtk = "0.18.2"
image = { version = "0.25.6", features = ["png"], default-features = false }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
simplelog = "0.12.2"
sunrise = "2.0.0"
toml = "0.8.22"
tray-icon = "0.20.1"
